Initial support for Java 15
PiperOrigin-RevId: 331818584